<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_demo</name>
  <version>1.0.0</version>
  <description>
    Turtlebot3 demo for RoboWorld 2019
  </description>
  <license>Apache 2.0</license>
  <author email="jhshim@robotis.com">Ryan Shim</author>
  <maintainer email="jhshim@robotis.com">Ryan Shim</maintainer>
  <url type="repository">https://github.com/rjshim/turtlebot3_demo</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>move_base_msgs</depend>
  <depend>roscpp</depend>
  <depend>tf2</depend>
  <exec_depend>turtlebot3_bringup</exec_depend>
</package>
